# backend/public/swagger.json
@@ -49,48 +49,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Category": {
-				"properties": {
-					"id": {
-						"type": "string"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"deletedAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"name": {
-						"type": "string"
-					},
-					"thumbnail": {
-						"$ref": "#/components/schemas/Media"
-					},
-					"food": {
-						"items": {
-							"$ref": "#/components/schemas/Food"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"id",
-					"createdAt",
-					"deletedAt",
-					"updatedAt",
-					"name",
-					"thumbnail",
-					"food"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"Food": {
 				"properties": {
 					"id": {
@@ -146,6 +104,79 @@
 					"isAvailable",
 					"image",
 					"category"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Category": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"deletedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"name": {
+						"type": "string"
+					},
+					"thumbnail": {
+						"$ref": "#/components/schemas/Media"
+					},
+					"food": {
+						"items": {
+							"$ref": "#/components/schemas/Food"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"id",
+					"createdAt",
+					"deletedAt",
+					"updatedAt",
+					"name",
+					"thumbnail",
+					"food"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CreateFoodDTO": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"style": {
+						"type": "string"
+					},
+					"hasSpicyNess": {
+						"type": "boolean"
+					},
+					"category": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"price",
+					"category",
+					"image"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -208,12 +239,41 @@
 			"post": {
 				"operationId": "CreateFood",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"data": {
+											"$ref": "#/components/schemas/Food"
+										},
+										"status": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"data",
+										"status"
+									],
+									"type": "object"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
-				"parameters": []
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateFoodDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/category": {
@@ -293,6 +353,34 @@
 						}
 					}
 				}
+			}
+		},
+		"/category/{id}/foods": {
+			"get": {
+				"operationId": "GetCategoryFoods",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Category"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
